--- a/views/info.html
+++ b/views/info.html
@@ -1,1 +1,27 @@
-ㅎㅇ
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/start.css">
+    <link rel="stylesheet" href="/css/info.css">
+    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
+
+    <title>Document</title>
+</head>
+<body>
+
+
+    <div class="main-title">
+        <h4 class="title">AI PersonalColor</h4>
+        <h4 class="title">인공지능 퍼스널 컬러</h4>
+    </div>
+
+
+    <div class="button">
+        <button type="button" class="start-button" onclick="location.href='/'">홈으로 돌아가기</button>
+    </div>
+
+</body>
+</html>
