--- a/views/inputs.html
+++ b/views/inputs.html
@@ -7,25 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>퍼스널컬러 테스트</title>
-    <meta name="title" content="동물상 테스트">
-    <meta name="subject" content="얼굴로 보는 인공지능 동물상 테스트, 나와 닮은 동물상을 찾아보세요!">
-    <meta name="keywords" content="동물상 테스트, 인공지능 동물상 테스트, 얼굴상, 얼굴상 테스트, 나와 닮은 동물, 동물상 찾기, 얼굴로 보는 동물상, 얼굴 동물, 동물얼굴, animalface, 강아지상, 고양이상, 여우상, 사슴상, 토끼상, 곰상, 공룡상, 인공지능 동물상, AI 얼굴상, AI 동물상">
-    <meta name="author" content="조코딩">
     <link rel="stylesheet" href="/css/inputs.css">
     <link rel="stylesheet" href="/public/css/inputs.css">
-    <link rel="canonical" href="https://animalface.site" />
-    <meta property="og:url" content="https://animalface.site" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="동물상 테스트" />
-    <meta property="og:description" content="얼굴로 보는 인공지능 동물상 테스트, 나와 닮은 동물상을 찾아보세요! 대표 동물상 연예인 사진 데이터로 학습한 인공지능이 나의 얼굴로 동물상과 특징을 찾아드립니다. 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능이 보는 나의 동물상 테스트 한번 해보세요! 강아지상? 고양이상? 여우상? 사슴상? 토끼상? 곰상? 공룡상? 얼굴상 테스트를 통해 나와 닮은 동물 찾기를 할 수 있습니다."
-    />
-    <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2Fc0eq42%2FbtqCQpiFhFn%2F8KPaOP9q8PXpJFRL7if55K%2Fimg.jpg" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145482737-6"></script>
+    <title>퍼스널컬러 테스트</title>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -39,25 +25,28 @@
 
 <body>
     <nav class="p-3 container navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="https://animalface.site/">퍼스널컬러 테스트 인공지능</a>
+        <a class="navbar-brand" href="/">퍼스널컬러 테스트</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">홈으로
+                    <a class="nav-link" href="/">개발자 깃허브
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item active" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});">
-                    <a class="nav-link" id="yotube-top-link" href="/info">웹 사이트 설명 읽기</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/info">페이지 설명 읽기
+                        <span class="sr-only">(current)</span>
+                    </a>
                 </li>
             </ul>
         </div>
     </nav>
     <section class="section">
-        <h1 class="title">퍼스널컬러 테스트</h1>
+        <h1 class="title">당신의 계절은 무엇입니까?
+        </h1>
         <h2 class="subtitle">인공지능 퍼스널컬러 테스트</h2>
     </br>
     </section>
@@ -124,7 +113,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="adModalLabel">(AD)광고 - 재시도를 한번 더 눌러주세요.</h5>
+                    <h5 class="modal-title" id="adModalLabel">재시도를 한번 더 눌러주세요.</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -148,7 +137,6 @@
         (function() {
         var d = document,
             s = d.createElement('script');
-        s.src = 'https://jocoding.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
         })();
@@ -165,5 +153,7 @@
     <script src="/js/model.js"">
 
     </script>
+
+    
 </body>
 </html>
