--- a/views/start.html
+++ b/views/start.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/css/start.css"> // 5500포트
-    <link rel="stylesheet" href="/css/start.css"> // 8080포트
+    <link rel="stylesheet" href="/public/css/start.css">
+    <link rel="stylesheet" href="/css/start.css">
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
 
     <title>Document</title>
 </head>
 <body>
-
 
     <div class="main-title">
         <h4 class="title">AI PersonalColor</h4>
@@ -28,5 +27,10 @@
         <button type="button" class="start-button" onclick="location.href='/inputs'">시작하기</button>
     </div>
 
+    <div class="footer-text">
+        <p>광문고등학교 진로비전캐프 TOP11 팀</p>
+        <a class="navbar-brand" href="/info">개발 로그</a>
+
+    </div>
 </body>
 </html>
